# restic-box

./: .SRCINFO  .gitignore  PKGBUILD  README.md  main.py  pyproject.toml  requirements.txt  restic-box.desktop  restic_config.py  restic_indicator.py  restic_runner.py  restic_settings.py  restic_status.py
.github/workflows/: release.yml
packaging/: AppImageBuilder.yml  AppRun
src/restic-box-0.3.2/: PKGBUILD  README.md  packages.txt  pyproject.toml  restic_settings.py
src/restic-box-0.3.2/packaging/: AppImageBuilder.yml
