[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "restic-box"
version = "0.2.0"
description = "GTK3 AppIndicator tray applet for restic backups over SSH"
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = ["PyGObject>=3.42", "pycairo>=1.20"]

[project.scripts]
restic-box = "restic_indicator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["restic*"]
